Fixed login menu alignment

--- a/app/styles/partials/_menus.scss
+++ b/app/styles/partials/_menus.scss
@@ -168,7 +168,7 @@
     border-top: 3px solid $projectNavbarBorderColor;
     border-bottom: 3px solid #ffffff;
 
-    top: 0;
+    top: 10px;
     bottom: 0;
     margin: 0;
 }
